# GmailExporter

./: .gitignore  README.md  main-extract.py  main.py  pyproject.toml  save_email.py
config/: config.yaml.template
