[project]
name = "gmailexporter"
version = "0.1.0"
description = "Export gmail messages to markdown files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "html2text>=2025.4.15",
    "pyyaml>=6.0.3",
]
